--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.41'
+    ext.camerax_version = '1.0.0-alpha04'
     repositories {
         google()
         jcenter()
